# nesy_runtime_monitoring

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NeSy_Runtime_Monitoring.ipynb  demo_monitors.py  dfa_script.py  docker-compose.yml  environment.yml  pyproject.toml
artur_future_work/: .gitignore  CLAUDE.md  README.md  conftest.py  environment.yml  pyproject.toml
artur_future_work/docs/: decision_diagram_transition_representation.md  phase1_capability_reframe.md  richer_benchmark_findings.md
artur_future_work/experiments/: exp7_richer_family.py  exp_uncertainty.py
artur_future_work/latex/: trimmed_from_paper.tex
artur_future_work/results/cpu/: exp_uncertainty.csv  exp_uncertainty_sharpness.csv
artur_future_work/src/benchmarks/: __init__.py  calibration.py  formulas.py
artur_future_work/src/monitors/: __init__.py  deep_dfa.py  symbolic_dfa.py
artur_future_work/src/monitors/progression/: __init__.py  eager.py  engine.py  flat.py  formula.py
artur_future_work/src/monitors/rulerunner/: __init__.py  cilp.py  engine.py  parse_tree.py  structured.py
artur_future_work/tests/: test_calibration.py  test_deep_dfa.py  test_deep_dfa_scan.py  test_progression.py  test_progression_eager.py  test_progression_flat.py  test_richer_formulas.py  test_rulerunner_engine.py  test_rulerunner_parse_tree.py  test_rulerunner_rules.py  test_soft_readout.py  test_symbolic_dfa.py
demo/: demo_monitors.py
docs/: DOCKER.md  EXPERIMENT_MAP.md  appendix_ideas.md  decision_diagram_transition_representation.md  nested_temporal_limitation.md  richer_benchmark_findings.md  rulerunner_progression_analysis.md
experiments/: exp1_single_trace.py  exp2_formula_complexity.py  exp3_batch_size.py  exp5_depth_microbench.py  exp6_state_scaling.py  exp7_richer_family.py  exp7_state_blowup.py  exp_uncertainty.py  make_all_plots.py  plot_clean.py  plots.py
latex/: 1_introduction.tex  2_preliminaries.tex  3_monitoring.tex  3_rulerunner.tex  4_deepdfa.tex  4_theory_cmp.tex  5_experiments.tex  5_theory_cmp.tex  6_experiments.tex  (+14 more)
(+59 files in other folders)
