[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nesy-monitoring-future"
version = "0.1.0"
description = "Neuro-Symbolic LTLf Monitoring — future work: probabilistic monitoring, calibration, and specification adaptation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4",
    "matplotlib>=3.10",
    "pandas>=3.0",
    "tqdm>=4.67",
    "scipy>=1.17",
    "ltlf2dfa>=1.0.2",
    # torch is intentionally omitted here — install via environment.yml
    # to get the correct CUDA build (torch==2.6.0+cu124)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "black>=26.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]
